# basic-api

./: dockerfile  pyproject.toml
basic_api/: app.py
