[tool.poetry]
name = "basic-api"
version = "0.1.0"
description = ""
authors = ["Victor Camargo <vcamargo.e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pytz = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
